added the apply for jobs popup, stake popup

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "caduceus_testnet",
-  "homepage": "https://jobcrypt.github.io/react-gh-pages",
+  "homepage": "https://mazi-ifeanyi.github.io/caduceus_testnet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
